--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@molitio/ui-core",
-    "version": "0.12.4-alpha.0",
+    "version": "0.12.5-alpha.0",
     "author": "molitio foundation",
     "description": "Universal reusable React UI Components",
     "license": "CC0-1.0",
@@ -178,5 +178,8 @@
     "workspaces": [
         "src",
         ".storybook"
-    ]
+    ],
+    "dependencies": {
+        "nanoid": "^4.0.0"
+    }
 }
