chore(83): resource gallery story refactor to proper pattern

--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -114,6 +114,7 @@
         "@storybook/addon-interactions": "^6.5.4",
         "@storybook/addon-jest": "^6.5.6",
         "@storybook/addon-links": "^6.5.4",
+        "@storybook/addon-outline": "^6.5.9",
         "@storybook/addons": "^6.5.4",
         "@storybook/builder-webpack5": "^6.5.4",
         "@storybook/manager-webpack5": "^6.5.4",
@@ -164,6 +165,7 @@
         "sass": "^1.52.1",
         "sass-loader": "^12.6.0",
         "size-limit": "^7.0.3",
+        "storybook-addon-designs": "^6.3.1",
         "style-loader": "^3.3.1",
         "styled-components": "^5.3.5",
         "ts-jest": "^28.0.4",
