--- a/ui-core/package.json
+++ b/ui-core/package.json
@@ -82,7 +82,7 @@
         "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
         "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --watch",
         "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
-        "docgen": "mkdir -p .artifact/jsdoc && ./node_modules/.bin/jsdoc src/index.ts -d .artifact/jsdoc",
+        "docgen": "mkdir -p .artifact/jsdoc && ./node_modules/.bin/jsdoc dist/index.js -d .artifact/jsdoc",
         "tsgen": "tsc --project tsconfig.json",
         "testgen": "npm run tsc __tests__ -d .artifact/__tests__ --project tsconfig.json"
     },
@@ -110,6 +110,7 @@
         "@rollup/plugin-typescript": "^8.3.0",
         "@storybook/addon-a11y": "^6.5.4",
         "@storybook/addon-actions": "^6.5.4",
+        "@storybook/addon-docs": "^6.5.9",
         "@storybook/addon-essentials": "^6.5.4",
         "@storybook/addon-interactions": "^6.5.4",
         "@storybook/addon-jest": "^6.5.6",
@@ -156,6 +157,7 @@
         "postcss-scss": "^4.0.4",
         "prettier": "2.6.2",
         "react": "^18.1.0",
+        "react-docgen": "^5.4.3",
         "react-dom": "^18.1.0",
         "react-jss": "^10.9.0",
         "rollup": "^2.75.0",
@@ -174,6 +176,7 @@
         "ts-node-dev": "^1.1.8",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "tslib": "^2.3.1",
+        "typedoc": "^0.23.7",
         "typescript": "^4.7.3",
         "typescript-plugin-css-modules": "^3.4.0"
     },
