chore(83): fix on tsconfig

--- a/packages/molitio-schema/tsconfig.json
+++ b/packages/molitio-schema/tsconfig.json
@@ -29,7 +29,7 @@
     "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
-    "sourceMap": true,
+    "sourceMap": false,
     "paths": {
       "@/*": ["src/*"]
     }
