chore(83): fixed build error post migration to yarn pnp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "**/.yarn": true,
     "**/.pnp.*": true
   },
+  "eslint.packageManager": "yarn",
+  "eslint.nodePath": ".yarn/sdks",
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "svg.preview.background": "dark-transparent"
 }
