--- a/package.json
+++ b/package.json
@@ -25,7 +25,15 @@
     "build": "yarn workspace @molitio/ui-core build"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@types/babel__core": "^7",
+    "@types/eslint": "^8",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
     "@yarnpkg/eslint-config": "^1.0.0-rc.11",
-    "@yarnpkg/sdks": "^3.0.0-rc.11"
+    "core-js": "^3.23.4",
+    "eslint": "^8.19.0",
+    "tslib": "latest",
+    "typescript": "^4.7.4"
   }
 }
